Changelog
=========

trunk
-----

 * Avoid error fetching widget values when no year or day was entered.
   [davisagli]

 * Made js for dateinput popup check for jQuery().dateinput before invoking
   it. Changed from $ to jQuery.
   [smcmahon]

 * removed trailing comma in JavaScript dict (which broke Internet Explorer)
   [Brainix]

1.0.4 (2011-01-19)
------------------
    
 * fixed show_jquerytools_dateinput_js for DatetimeWidget [awello]
 * fix time-dependent test [davisagli]
    
1.0.3 (2011-01-03)
------------------

 * Should use None for tal:attributes (Chameleon compatibility) [rossp]
 * Added options for calendar (via jquery.tools.dateinput) [garbas]

1.0.2 (2010-07-20)
------------------

 * Fix invalid XML (Chameleon compatibility) [wichert]

1.0.1 (2010-06-30)
------------------

 * add show_today_link to the IDateWidget interface [csenger]
 * Italian translation added [garbas]

1.0 (2010-04-18)
----------------

 * extract values in HIDDEN_MODE and add test for extract() [csenger]
 * fix handling of AM/PM in DateTimeWidget and add test [csenger]

0.1a9 (2009-09-07)
------------------

 * provide french translation [vincentfretin]

0.1a8 (2009-09-04)
------------------

 * provide english, german, slovenian, spanish, portugal, croatian,
   serbian(latin&cyrilic) translations [garbas]

0.1a7 (2009-09-04)
------------------

 * MonthYearWidget added [garbas]
 * spliting widget.py script into script for each widget [garbas]
 * only using one hidden/display template [garbas]
 * show_today_link widget option which is inserting current date into fields
   using plain javascript

0.1a6 (2009-06-05)
------------------

 * intendation problem again, this just isnt my day, tests passing [garbas]

0.1a5 (2009-06-05)
------------------

 * intendation problem, didn't set new vim setup properly :P [garbas]

0.1a4 (2009-06-05)
------------------

 * MANIFEST.in file fixed, now includes README.txt and HISTORY.txt [garbas]

0.1a3 (2009-06-05)
------------------
